# freer-church

./: .gitignore  ChangeLog.md  LICENSE  README.md  freer-church.cabal
src/Control/Monad/Freer/: Church.hs
tests/: example.hs
