name:                freer-church
version:             0.0
synopsis:            Church-encoded Freer monad
-- description:         
homepage:            https://github.com/lambdageek/freer-church
license:             BSD3
license-file:        LICENSE
author:              Aleksey Kliger
maintainer:          aleksey@lambdageek.org
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Freer.Church
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fno-max-relevant-binds

test-suite example
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             example.hs
  build-depends:       base >= 4.9 && < 5
                     , free >= 4.12
                     , freer-church  